<resources>
    <string name="app_name">Edvora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edvora">Edvora</string>
    <string name="dhruv_singh">Dhruv Singh</string>
    <string name="rides">Rides:</string>
    <string name="nearest">Nearest</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="Filters">Filters</string>
    <string name="city_name">City Name</string>
    <string name="state_name">State Name</string>
    <string name="ride_id">Ride Id :</string>
    <string name="origin_station">Origin Station :</string>
    <string name="station_path">Station path :</string>
    <string name="date">Date :</string>
    <string name="distance">Distance :</string>
    <string name="state">State</string>
    <string name="city">City</string>
</resources>