<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/shape_nearest"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@drawable/map" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_nearest_item"
            android:text="@string/city_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/stateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_nearest_item"
            android:text="@string/state_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_id"
            android:textColor="@color/white_50"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/rideId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="002" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin_station"
            android:textColor="@color/white_50"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/originStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_path"
            android:textColor="@color/white_50"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/StationPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="[20, 39, 40, 42, 54, 63, 72, 88, 98]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white_50"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="15th Feb 2022 16:33" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="@color/white_50"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="0" />
    </LinearLayout>


</LinearLayout>