<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.main.MainActivity">


    <LinearLayout
        android:id="@+id/filtersDialog"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:background="@drawable/shape_filters"
        android:elevation="8dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/filters">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/Filters"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@color/white" />

        <AutoCompleteTextView
            android:id="@+id/state"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:inputType="none"
            android:paddingBottom="0dp"
            android:padding="6dp"
            android:text="@string/state"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:theme="@style/custom" />

        <AutoCompleteTextView
            android:id="@+id/city"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="6dp"
            android:inputType="none"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:theme="@style/custom" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/edvora"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="normal" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/rectangle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/profile_image"
                android:text="@string/dhruv_singh"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </RelativeLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/rides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/rides"
        android:textColor="@color/font_"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        app:layout_constraintEnd_toStartOf="@+id/filters"
        app:layout_constraintStart_toEndOf="@+id/rides"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:tabGravity="start"
        app:tabIndicatorColor="@color/white"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/CustomTextAppearanceTab"
        app:tabTextColor="@color/font_" />

    <TextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="4dp"
        android:drawablePadding="8dp"
        android:text="@string/Filters"
        android:textColor="@color/font_"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>